<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/recipeNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_name_txt"
            android:inputType="text"
            android:autofillHints="" />

        <EditText
            android:id="@+id/ingredientsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/ingredients_txt"
            android:inputType="textMultiLine"
            android:autofillHints="" />

        <EditText
            android:id="@+id/instructionsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/instructions_txt"
            android:inputType="textMultiLine"
            android:autofillHints="" />

        <EditText
            android:id="@+id/cookingTimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/cooking_time_minutes_txt"
            android:inputType="number"
            android:autofillHints="" />

        <RatingBar
            android:id="@+id/userRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:numStars="5"
            android:stepSize="0.5" />

    </LinearLayout>

</ScrollView>